@@ -1,4 +1,7 @@
 Version 1.10.7+dev:
+ * Add-ons server:
+   * Implemented read-only mode option (read_only boolean attribute in
+     server config WML, defaults to "no").
  * Language and i18n:
    * Updated translations: British English, German, Greek, Indonesian,
      Japanese, Vietnamese
